2005-02-06 02:13 Gregory John Casamento <greg_casamento@yahoo.com>

	* Resources/GormViewSizeInspector.gorm: Corrected box title color.

2005-02-05 15:26 Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/0Menus/main.m: Corrected "revert To Saved" to 
	"Revert To Saved".
	* Palettes/2Controls/GormNSButtonInspector.gorm: Corrected box
	title color.

2005-02-05 09:16 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormDocument.m: Improved some of the panel messages when 
	gorm has a problem loading/saving.  Added titles.
	* Gorm.m: Made some of the warning panels have a title.  Added code
	to -testInterface: and -endTesting: to close extra windows opened
	during testing.
	* GormPrivate.h: testingWindows ivar to hold windows which were open
	before testing, so that we know which ones to orderOut when testing
	ends.

2005-02-02 22:44 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormDocument.m: -[GormDocument removeConnectionsWithLabel:..] added
	break to avoid iterating through all connections when the user has 
	responded "NO".
	* GormFilePrefsManager.m: Update version to 0.9.1
	* GormInfo.plist: Update version to 0.9.1
	* GormObjCHeaderParser/OCIVarDecl.m: Change to correct problem
	reading ivars with <...> in them such as id<SomeProtocol> xxx.

2005-02-01 23:40 Gregory John Casamento <greg_casamento@yahoo.com>

	* Version 0.9.0

2005-01-31 23:34 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormClassManager.m: Corrected bug#11778.  Added code which
	removes connections when a class is being reparsed.
	* GormFilePrefsManager.m: Updated file prefs with new version.
	* GormInfo.plist: Updated plist with new version.

2005-01-31 01:33 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormDocument.m: In the -[GormDocument removeConnections:..]
	methods corrected a problem with removing a connector while 
	enumerating throught the list of connectors.  This was causing 
	the process to miss some of the connections which should have 